--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development PORT=8080 nodemon src/index.js",
-    "start:prod": "cross-env NODE_ENV=production node src/index.js",
+    "start:prod": "NODE_ENV=production node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
