Aligned PORT name to what Heroku wants

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,6 @@ HTTP_PROTOCOL=http
 HTTP_HOSTNAME=
 HTTP_PORT=
 
-# Port to start up the HTTP relay server
-LISTEN_PORT=1337
+# Port to start up the HTTP relay server (only used locally)
+# When deployed to Heroku, their own port is substituted here
+PORT=1337
